--- a/client/src/stylesheets/HouseholdView.css
+++ b/client/src/stylesheets/HouseholdView.css
@@ -4,3 +4,20 @@
     justify-content: space-around;
     align-items: center;
 }
+
+.items{
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.items button{
+    color: white;
+    border: none;
+    background-color: grey;
+    border-radius: 5px;
+    height: 50px;
+    width: 100px;
+}
