Lift state for item viewing

--- a/client/src/stylesheets/HouseholdView.css
+++ b/client/src/stylesheets/HouseholdView.css
@@ -15,6 +15,7 @@
 
 .items button{
     color: white;
+    font-size: 18px;
     border: none;
     background-color: grey;
     border-radius: 5px;
