--- a/client/src/stylesheets/Login.css
+++ b/client/src/stylesheets/Login.css
@@ -16,10 +16,9 @@ h2 {
     height: 500px;
     margin-left: auto;
     margin-right: auto;
-    /* bottom: 10px */
     margin-top: 50px;
     border-radius: 20px;
-    box-shadow: 10px 20px 5px gray;
+    box-shadow: 20px 30px 5px #34393D;
 }
 
 .login{
@@ -27,5 +26,49 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+
+}
+
+.login input {
+    border: none;
+    border-bottom: 1px solid black;
+    background-color: #fff2e6;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+
+
+
+}
+
+.login input:active{
+    background-color: #fff2e6;
+}
+
+.login input:focus{
+    outline-width: 0;
+}
+
+.register{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 60px;
+}
+
+.register p {
+    margin-right: 10px;
+}
+
+.login button {
+    margin-top: 20px;
+    background-color: transparent;
+    border: 1px solid #34393D;
+    height: 30px;
+    width: 50px;
 }
 
