--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,7 @@ nav {
   height: 40px;
   font-family: 'Lato', sans-serif;
   color: black;
-  font-weight: '400';
+  font-weight: 400;
   font-size: 15px;
 }
 
@@ -76,7 +76,7 @@ nav {
   border: none;
   font-family: 'Lato', sans-serif;
   color: black;
-  font-weight: '400';
+  font-weight: 400;
   font-size: 15px;
   position: absolute;
   left: 0px;
@@ -91,7 +91,7 @@ nav {
   border: none;
   font-family: 'Lato', sans-serif;
   color: black;
-  font-weight: '400';
+  font-weight: 400;
   font-size: 15px;
   position: absolute;
   right: 0px;
