--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .logout {
-  background-color: #34393D;
+  background-color: rgba(52, 57, 61, 0.838);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -98,6 +98,9 @@ nav {
   width: 100px;
 }
 
+button {
+  outline: none;
+}
 
 
 
