--- a/client/src/stylesheets/HouseholdView.css
+++ b/client/src/stylesheets/HouseholdView.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Oxygen');
+
 .users {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    font-family: 'Lato', sans-serif;
+
 }
 
 .items{
-    height: 300px;
+    height: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -15,12 +19,34 @@
 }
 
 .items button{
-    color: white;
+    color: #F0C331;
     font-size: 18px;
     border: none;
-    background-color: grey;
+    background-color: rgba(52, 57, 61, 0.817);
     border-radius: 5px;
     height: 50px;
+    width: 200px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300
+}
+
+.items button:hover{
+    font-weight: 400;
+    border: 1px solid #F0C331;
+    box-shadow: 5px 10px 5px #34393D;
+}
+
+.item-title{
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+}
+
+.users-title{
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+}
+
+.create{
     width: 100px;
 }
 
