--- a/client/src/stylesheets/HouseholdView.css
+++ b/client/src/stylesheets/HouseholdView.css
@@ -14,8 +14,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
+    margin-top: 40px;
 }
 
 .items button{
