--- a/client/src/stylesheets/CreateItem.css
+++ b/client/src/stylesheets/CreateItem.css
@@ -44,3 +44,23 @@ align-items: center;
     justify-content: space-between;
     align-items: center;
 }
+
+.form-criteria select {
+    border: 0px;
+    margin-left: 15px;
+    width: 200px;
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    text-align: center;
+    background-color: transparent;
+    border-bottom: 1px solid black;
+    border-radius: 0px;
+}
+
+.create-title{
+    font-family: 'Oxygen', sans-serif;
+    font-size: 20px;
+
+}
+
+
