--- a/client/src/stylesheets/HouseholdView.css
+++ b/client/src/stylesheets/HouseholdView.css
@@ -37,6 +37,14 @@
     box-shadow: 5px 10px 5px #34393D;
 }
 
+.item-view button {
+    border: 1px solid #F0C331;
+    /* z-index: 10;
+    width: 300px;
+    height: 100px;
+    font-size: 40px; */
+}
+
 .item-title{
     font-family: 'Lato', sans-serif;
     font-size: 20px;
