--- a/client/src/stylesheets/HouseholdView.css
+++ b/client/src/stylesheets/HouseholdView.css
@@ -2,11 +2,12 @@
 
 .users {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
     font-family: 'Lato', sans-serif;
-
+    font-size: 20px;
+    height: 200px;
 }
 
 .items{
@@ -14,7 +15,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    /* align-items: center; */
     flex-wrap: wrap;
     margin-top: 40px;
 }
@@ -50,40 +50,55 @@
     font-size: 20px;
 }
 
+.item-title:hover + .create{
+    display: block
+}
+
+
 .users-title{
     font-family: 'Lato', sans-serif;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .create{
+    display: inline-block;
     width: 100px;
     align-self: center;
 }
 
 .message-image{
     width: 50px;
+    z-index: 5;
+    position: absolute;
+    top: 0;
+    margin-left: 50px;
 }
 
-.user-wrapper:hover .user-inner {
-    display: block;
-    background-color: rgba(52, 57, 61, 0.68);
-    left: 0;
-    width: 100vw;
+.message-image:hover + .user-inner{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #F0C331;
+    border-radius: 10px;
+    box-shadow: 20px 30px 5px #34393D;
+
+
 }
 
-.user-wrapper .user-inner{
+.user-inner{
     display: none;
     position: absolute;
-    background-color: red;
-    /* right: 10px */
-
-
-    
+    top: 40px;
+    left: 40%;
+    height: 300px;
+    width: 30vw;
+    color: #34393D
 }
 
-.user-wrapper {
-    position: absolute;
-    right: 200px;
-    top: 0px;
-    
-}
+/* .items-create{
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    justify-content: space-between;
+    width: 400px;
+} */
