--- a/client/src/stylesheets/UserProfile.css
+++ b/client/src/stylesheets/UserProfile.css
@@ -23,3 +23,19 @@
     font-weight: 300
 
 }
+
+.profile{
+    background-color: #d4e8f5;
+    border-radius: 20px;
+    height: 500px;
+    width: 500px;
+    box-shadow: 20px 30px 5px #34393D;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: black;
+    align-self: center;
+    justify-content: space-around;
+    margin-top: 50px;
+
+}
