--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,7 +66,21 @@ nav {
 .login-button button:hover{
   background-color: #0072B4;
   border: 1px solid #F0C331
+}
 
+.login-register:hover{
+  background-color: #2B4453;
+  color: #F0C331;
+}
+
+.back-button:hover{
+  background-color: #2B4453;
+  color: #F0C331;
+}
+
+.logout-button:hover{
+background-color: #2B4453;
+color: #F0C331
 }
 
 .greeting{
@@ -113,6 +127,11 @@ button {
   outline: none;
 }
 
-
+.home-button{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 30%;
+}
 
 
