--- a/client/src/stylesheets/LandingPage.css
+++ b/client/src/stylesheets/LandingPage.css
@@ -11,6 +11,7 @@
     top: 200px;
     background-color: rgb(240, 195, 49);
     z-index: 10;
+    color: #2B4453
 }
 
 .landing-image img {
@@ -35,4 +36,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.enter-button{
+    width: 200px;
+    height: 50px;
+    background-color: #2B4453;
+    color: #F0C331;
+    font-size: 18px;
+    border: none;
+    margin-top: 30px;
 }
