--- a/client/src/stylesheets/HouseholdView.css
+++ b/client/src/stylesheets/HouseholdView.css
@@ -186,3 +186,9 @@
 .create-button{
     background-color: transparent
 }
+
+.no-items {
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    margin-top: 50px;
+}
