--- a/client/src/stylesheets/HouseholdView.css
+++ b/client/src/stylesheets/HouseholdView.css
@@ -192,3 +192,13 @@
     font-size: 20px;
     margin-top: 50px;
 }
+
+.edit-icon{
+    width: 20px;
+    height: 20px;
+}
+
+.category-pic{
+    width: 20px;
+    height: 20px;
+}
