--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,15 +62,25 @@ nav {
   font-weight: 400;
   font-size: 15px;
 }
-
+/* 
 .login-button button:hover{
   background-color: #0072B4;
   border: 1px solid #F0C331
-}
+} */
 
 .login-register:hover{
   background-color: #2B4453;
   color: #F0C331;
+}
+
+.login-register{
+  width: 200px;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: 'Lato', sans-serif;
+
+
+
 }
 
 .back-button:hover{
