--- a/client/src/stylesheets/CreateItem.css
+++ b/client/src/stylesheets/CreateItem.css
@@ -62,4 +62,20 @@ align-items: center;
 
 }
 
+.new-item-submit{
+    width: 100px;
+    background-color: #F0C331;
+    height: 50px;
+    width: 200px;
+    color: #2B4453;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+}
+
+.new-item-submit:hover{
+    background-color: #2B4453;
+    color: #F0C331
+}
+
 
